--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
     "eslint-plugin-vue": "^5.2.3",
     "file-loader": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "husky": "^3.0.0",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
+    "lint-staged": "^9.2.0",
     "mini-css-extract-plugin": "^0.8.0",
     "postcss-loader": "^3.0.0",
     "precss": "^4.0.0",
