--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "mongoose": "^5.6.4",
     "vue": "^2.6.10",
     "vue-router": "^3.0.7",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^9.6.1",
