--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^7.4.0",
     "log4js": "^4.5.1",
+    "mongodb": "^3.3.0-beta2",
     "mongoose": "^5.6.4",
     "vue": "^2.6.10",
     "vue-router": "^3.0.7",
